<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/security_key_system"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/key_system_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rdo_sys_mksk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_key_system_mksk" />

                <RadioButton
                    android:id="@+id/rdo_sys_dukpt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/security_key_system_dukpt" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/security_kcv_mode"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <RadioGroup
                android:id="@+id/kcv_mode_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/kcv_mode_nochk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_NOCHK" />

                <RadioButton
                    android:id="@+id/kcv_mode_chk0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_CHK0" />

                <RadioButton
                    android:id="@+id/kcv_mode_chkfix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_CHKFIX" />

                <RadioButton
                    android:id="@+id/kcv_mode_chkmac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_CHKMAC" />

                <RadioButton
                    android:id="@+id/kcv_mode_chkcmac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_CHKCMAC" />

                <RadioButton
                    android:id="@+id/kcv_mode_chkfix_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_CHKFIX_16"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/kcv_mode_chkbuf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_CHK_BUF"
                    android:visibility="gone" />

                <RadioButton
                    android:id="@+id/kcv_mode_chkcmac_buf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="KCV_MODE_CHKCMAC_BUF"
                    android:visibility="gone" />
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_target_pkg_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_target_pkg_name"
                    android:inputType="text"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/key_index"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/security_key_index"
                    android:inputType="number"
                    android:textColor="@color/colorTextContent"
                    android:textColorHint="@color/colorTextHelp"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="KCV:"
                android:textColor="@color/colorTextHelp"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_get_kcv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titleSize"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:elevation="8dp"
                android:gravity="center"
                android:text="@string/ok"
                android:textAppearance="?android:attr/textAppearanceLargeInverse"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:backgroundTint="@color/colorOrange"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>