<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titleSize"
        android:elevation="4dp"
        app:titleTextAppearance="@style/Toolbar.TitleText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/pin_pad_p2b_tip"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/pin_pad_startup_pin"
                        android:textColor="@color/colorTextContent"
                        android:textSize="14sp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_start_input_pin"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/titleSize"
                        android:layout_marginTop="16dp"
                        android:elevation="3dp"
                        android:gravity="center"
                        android:text="@string/pin_pad_startup_pin"
                        android:textAllCaps="false"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="8dp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/colorAccent"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/pin_pad_get_pinblock"
                        android:textColor="@color/colorTextContent"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/pin_pad_pik_key_system"
                        android:textColor="@color/colorTextHelp"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/rdg_pik_system"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/rdo_key_system_mksk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/pin_pad_sec_mksk"
                            android:textColor="@color/colorTextContent"
                            android:textSize="14sp" />

                        <RadioButton
                            android:id="@+id/rdo_key_system_dukpt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:text="@string/pin_pad_sec_dukpt"
                            android:textColor="@color/colorTextContent"
                            android:textSize="14sp" />
                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:counterEnabled="true"
                        app:counterMaxLength="4">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_pik_index"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/pin_pad_pik_index"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorTextContent"
                            android:textColorHint="@color/colorTextHelp"
                            android:textSize="14sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:counterEnabled="true"
                        app:counterMaxLength="19">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_card_no"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:hint="@string/pin_pad_card_no"
                            android:inputType="number"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textColor="@color/colorTextContent"
                            android:textColorHint="@color/colorTextHelp"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/mb_get_pinblock"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/titleSize"
                        android:layout_marginTop="16dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:text="@string/pin_pad_get_pinblock"
                        android:textAppearance="?android:attr/textAppearanceLargeInverse"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:backgroundTint="@color/colorOrange"
                        app:cornerRadius="8dp" />

                    <TextView
                        android:id="@+id/tv_pinblock_resuult"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:elevation="8dp"
                        android:textColor="@color/colorTextContent"
                        android:textSize="16sp" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>