<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.sm.syspago.se.view.TitleView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titleSize"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp" />

            <View
                android:id="@+id/line_card_num"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@color/colorLineColor" />

            <LinearLayout
                android:id="@+id/view_card_num"
                android:layout_width="match_parent"
                android:layout_height="@dimen/titleSize"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pin_pad_card_number"
                    android:textColor="@color/colorTextHelp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tv_card_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/app_name"
                    android:textColor="@color/colorTextContent"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/custom_btn_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="@dimen/titleSize"
            android:layout_weight="1"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/clear"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/colorOrange"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_height="@dimen/titleSize"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:elevation="8dp"
            android:gravity="center"
            android:text="@string/pin_pad_text_confirm"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceLargeInverse"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:backgroundTint="@color/colorOrange"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <com.sm.syspago.se.view.PasswordEditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/itemSize"
        android:layout_marginBottom="10dp" />

    <com.sm.syspago.se.view.FixPasswordKeyboard
        android:id="@+id/fixPasswordKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>